grafana-dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2026-05-26T10:12:25Z"
  generation: 1
  labels:
    app.kubernetes.io/instance: grafana
    app.kubernetes.io/managed-by: grafana-operator
  name: grafana-deployment
  namespace: grafana
  ownerReferences:
  - apiVersion: grafana.integreatly.org/v1beta1
    blockOwnerDeletion: true
    controller: true
    kind: Grafana
    name: grafana
    uid: 68fa88a1-43b3-4096-b535-7795f07e131c
  resourceVersion: "142331"
  uid: ef4659ab-9d4e-4b11-a2db-e0013216c891
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: grafana
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: grafana
      name: grafana-deployment
    spec:
      containers:
      - args:
        - -config=/etc/grafana/grafana.ini
        image: docker.io/grafana/grafana@sha256:e932bd6ed0e026595b08483cd0141e5103e1ab7ff8604839ff899b8dc54cabcb
        imagePullPolicy: IfNotPresent
        name: grafana
        ports:
        - containerPort: 3000
          name: grafana-http
          protocol: TCP
        - containerPort: 9094
          name: grafana-alert
          protocol: TCP
        readinessProbe:
          failureThreshold: 1
          httpGet:
            path: /api/health
            port: 3000
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 3
        resources:
          limits:
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 256Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/grafana/grafana.ini
          name: grafana-ini
          subPath: grafana.ini
        - mountPath: /var/lib/grafana
          name: grafana-data
        - mountPath: /var/log/grafana
          name: grafana-logs
        - mountPath: /tmp
          name: grafana-tmp
      - args:
        - --provider=openshift
        - --pass-basic-auth=false
        - --https-address=:9091
        - --http-address=
        - --email-domain=*
        - --upstream=http://localhost:3000
        - --tls-cert=/etc/tls/private/tls.crt
        - --tls-key=/etc/tls/private/tls.key
        - --openshift-service-account=grafana-sa
        - --cookie-secret-file=/etc/proxy/secrets/session_secret
        - --openshift-ca=/etc/pki/tls/cert.pem
        - --openshift-ca=/var/run/secrets/kubernetes.io/serviceaccount/ca.crt
        - --openshift-ca=/etc/proxy/certs/ca-bundle.crt
        - --skip-auth-regex=^/metrics
        - --skip-auth-regex=^/api/health
        - '--openshift-sar={"namespace": "grafana", "resource": "services", "verb":
          "get"}'
        image: image-registry.openshift-image-registry.svc:5000/openshift/oauth-proxy:v4.4
        imagePullPolicy: IfNotPresent
        name: oauth-proxy
        ports:
        - containerPort: 9091
          name: oauth
          protocol: TCP
        resources:
          limits:
            cpu: 400m
            memory: 250Mi
          requests:
            cpu: 50m
            memory: 50Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/tls/private
          name: secret-grafana-tls
        - mountPath: /etc/proxy/secrets
          name: secret-grafana-proxy
        - mountPath: /etc/proxy/certs
          name: ocp-injected-certs
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      serviceAccount: grafana-sa
      serviceAccountName: grafana-sa
      terminationGracePeriodSeconds: 30
      volumes:
      - name: secret-grafana-tls
        secret:
          defaultMode: 420
          secretName: grafana-tls
      - name: secret-grafana-proxy
        secret:
          defaultMode: 420
          secretName: grafana-proxy
      - configMap:
          defaultMode: 420
          name: ocp-injected-certs
        name: ocp-injected-certs
      - configMap:
          defaultMode: 420
          name: grafana-ini
        name: grafana-ini
      - emptyDir: {}
        name: grafana-logs
      - name: grafana-data
        persistentVolumeClaim:
          claimName: grafana-pvc
      - emptyDir: {}
        name: grafana-tmp
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-05-26T10:12:25Z"
    lastUpdateTime: "2026-05-26T10:13:56Z"
    message: ReplicaSet "grafana-deployment-7b7898f96b" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2026-05-27T09:50:47Z"
    lastUpdateTime: "2026-05-27T09:50:47Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
