lb-scaled-vllm.yaml
apiVersion: v1
kind: Service
metadata:
  name: llama-vllm-scaled-lb
spec:
  type: ClusterIP
  selector:
    serving.kserve.io/inferenceservice: llama-vllm-scaled
  ports:
    - port: 8000
      targetPort: 8000
